--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,3 +1,7 @@
-.main {
+.filter {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(201deg) brightness(106%) contrast(106%);
+}
 
+.filter:hover {
+    filter: invert(71%) sepia(36%) saturate(697%) hue-rotate(158deg) brightness(110%) contrast(95%);
 }
