--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -18,6 +18,10 @@
     animation: fadeIn 1s;
 }
 
+.fadeInSlow {
+    animation: fadeIn 3s;
+}
+
 @keyframes fadeIn {
     0% {opacity: 0}
     100% {opacity: 1}
